--- a/src/SkeletonAnimationDesignPanel.mxml
+++ b/src/SkeletonAnimationDesignPanel.mxml
@@ -34,7 +34,6 @@
 			private var aboutXML:XML =
 				<root>
 					<br/>
-					<br/>
 					<b>DragonBones Version 1.4</b>
 					<br/>
 					<br/>
@@ -143,7 +142,7 @@
 		</s:NavigatorContent>
 		<s:NavigatorContent width="100%" height="100%" label="About">
 			<mx:TextArea id="txtAbout" left="0" right="0" top="0" bottom="0" editable="false"
-						 htmlText="{aboutXML}" textAlign="center"/>
+						 htmlText="{aboutXML}" textAlign="left"/>
 		</s:NavigatorContent>
 	</mx:TabNavigator>
 	<s:Button x="10" y="10" width="60" height="24" cornerRadius="0"
