--- a/src/view/ImportWindow.mxml
+++ b/src/view/ImportWindow.mxml
@@ -2,7 +2,7 @@
 <s:TitleWindow xmlns:fx="http://ns.adobe.com/mxml/2009"
 			   xmlns:s="library://ns.adobe.com/flex/spark"
 			   xmlns:mx="library://ns.adobe.com/flex/mx"
-			   width="310" height="250" title="{LanguageProxy.getInstance().importTitle}"
+			   width="310" height="250" title="{resourceManager.getString('resources','import')}"
 			   close="closeWindow()"
 			   >
 	<fx:Script>
@@ -14,18 +14,19 @@
 			import message.MessageDispatcher;
 			
 			import model.ImportDataProxy;
-			import model.LanguageProxy;
 			
-			import mx.events.CloseEvent;
-			import mx.managers.PopUpManager;
 			import mx.collections.ArrayCollection;
+			import mx.events.CloseEvent;
+			import mx.events.FlexEvent;
+			import mx.managers.PopUpManager;
+			import mx.resources.ResourceManager;
 			
 			[Bindable]
 			private var dataImportAC:ArrayCollection = new ArrayCollection([
-				LanguageProxy.getInstance().getItem(LanguageProxy.IMPORT_FLA_ALL_ITEM), 
-				LanguageProxy.getInstance().getItem(LanguageProxy.IMPORT_FLA_SELECTED_ITEM), 
-				LanguageProxy.getInstance().getItem(LanguageProxy.IMPORT_EXPORTED_DATA), 
-			]);
+				ResourceManager.getInstance().getString('resources','allLibraryItems'),
+				ResourceManager.getInstance().getString('resources','selectedItems'),
+				ResourceManager.getInstance().getString('resources','exportedData')
+			]);;
 			
 			private function importData():void{
 				switch(ImportDataProxy.getInstance().dataImportID){
@@ -52,6 +53,7 @@
 				MessageDispatcher.addEventListener(MessageDispatcher.LOAD_FILEDATA, onCommandHandler);
 				PopUpManager.removePopUp(this);
 			}
+			
 		]]>
 	</fx:Script>
 
@@ -61,7 +63,7 @@
 				<s:SolidColorStroke color="0x000000" weight="1" caps="square"/>
 			</s:stroke>
 		</s:Line>
-		<s:Label left="10" height="24" text="Texture Setting" textAlign="left"
+		<s:Label left="10" height="24" text="{resourceManager.getString('resources','textureSetting')}" textAlign="left"
 				 verticalAlign="middle"/>
 		<s:Line width="100%">
 			<s:stroke>
@@ -71,13 +73,13 @@
 		
 	</s:HGroup>
 	<s:VGroup x="10" y="10" width="100" height="150" gap="6" horizontalAlign="right">
-		<s:Label width="100%" height="24" text="{LanguageProxy.getInstance().getItem(LanguageProxy.IMPORT_LABEL)}" textAlign="right" verticalAlign="middle"/>
+		<s:Label width="100%" height="24" text="{resourceManager.getString('resources','importLabel')}" textAlign="right" verticalAlign="middle"/>
 		<s:Spacer height="25"/>
 		
 
-		<s:Label width="100%" height="24" text="{LanguageProxy.getInstance().getItem(LanguageProxy.TEXTURE_SORT)}" textAlign="right" verticalAlign="middle"/>
-		<s:Label width="100%" height="24" text="{LanguageProxy.getInstance().getItem(LanguageProxy.TEXTURE_WIDTH)}" textAlign="right" verticalAlign="middle"/>
-		<s:Label width="100%" height="24" text="{LanguageProxy.getInstance().getItem(LanguageProxy.TEXTURE_PADDING)}" textAlign="right" verticalAlign="middle"/>
+		<s:Label width="100%" height="24" text="{resourceManager.getString('resources','layoutAlgorithm')}" textAlign="right" verticalAlign="middle"/>
+		<s:Label width="100%" height="24" text="{resourceManager.getString('resources','size')}" textAlign="right" verticalAlign="middle"/>
+		<s:Label width="100%" height="24" text="{resourceManager.getString('resources','padding')}" textAlign="right" verticalAlign="middle"/>
 	</s:VGroup>
 	<s:VGroup x="118" y="10" width="170" gap="6">
 		<s:DropDownList width="100%" height="24" textAlign="right"
@@ -107,11 +109,11 @@
 	
 	<s:HGroup left="20" right="20" bottom="20" gap="20" horizontalAlign="center">
 		<s:Button width="100" height="24" cornerRadius="0"
-				  label="{LanguageProxy.getInstance().getItem(LanguageProxy.OK)}" 
+				  label="{resourceManager.getString('resources','ok')}" 
 				  click="importData()"
 				  />
 		<s:Button width="100" height="24" cornerRadius="0"
-				  label="{LanguageProxy.getInstance().getItem(LanguageProxy.CANCEL)}"
+				  label="{resourceManager.getString('resources','cancel')}"
 				  click="closeWindow()"
 				  />
 	</s:HGroup>
